[gd_scene load_steps=3 format=3 uid="uid://cgo2nxo0g4w7a"]

[ext_resource type="Script" uid="uid://bfsqgplm4rnok" path="res://Scripts/Menus/options_menu.gd" id="1_kxhhp"]
[ext_resource type="PackedScene" uid="uid://6k0f61ebuhrf" path="res://Scenes/Menus/volume_slider.tscn" id="2_n7p1g"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kxhhp")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="AspectRatioContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -324.0
offset_right = 324.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Options"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/Control2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -67.0
offset_right = 67.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/Control2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/Control2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master volume"

[node name="MasterVolumeSlider" parent="AspectRatioContainer/Control2/VBoxContainer/VBoxContainer" instance=ExtResource("2_n7p1g")]
layout_mode = 2
value = 0.0
bus_name = "Master"

[node name="VBoxContainer2" type="VBoxContainer" parent="AspectRatioContainer/Control2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/Control2/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" parent="AspectRatioContainer/Control2/VBoxContainer/VBoxContainer2" instance=ExtResource("2_n7p1g")]
layout_mode = 2
value = 0.0
bus_name = "music"

[node name="VBoxContainer3" type="VBoxContainer" parent="AspectRatioContainer/Control2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/Control2/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "SFX"

[node name="SFXVolumeSlider" parent="AspectRatioContainer/Control2/VBoxContainer/VBoxContainer3" instance=ExtResource("2_n7p1g")]
layout_mode = 2
bus_name = "sfx"

[node name="Back" type="Button" parent="AspectRatioContainer/Control2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="pressed" from="AspectRatioContainer/Control2/VBoxContainer/Back" to="." method="_on_back_pressed"]
